--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-inlinesvg": "^2.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "uuid": "^8.3.2",
