--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.34",
-    "@date-io/date-fns": "^2.10.7",
-    "@material-ui/core": "^4.11.3",
+    "@date-io/date-fns": "1.x",
+    "@material-ui/core": "^5.0.0-alpha.24",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^5.0.0-alpha.24",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.14",
+    "date-fns": "^2.16.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
