--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "date-fns": "^2.16.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-cool-onclickoutside": "^1.5.9",
     "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
+    "react-google-places-autocomplete": "^3.1.1",
     "react-inlinesvg": "^2.2.2",
     "react-number-format": "^4.4.4",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "use-places-autocomplete": "^1.8.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
