--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.14",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-cool-onclickoutside": "^1.5.9",
