--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.24",
+    "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^5.0.0-alpha.24",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.14",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.16.1",    
     "dotenv": "^8.2.0",
+    "material-ui-dropzone": "^3.5.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-cool-onclickoutside": "^1.5.9",
     "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
     "react-google-places-autocomplete": "^3.1.1",
+    "react-helmet": "^6.1.0",
     "react-inlinesvg": "^2.2.2",
     "react-number-format": "^4.4.4",
     "react-places-autocomplete": "^7.3.0",
