--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.14",
-    "date-fns": "^2.16.1",    
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "material-ui-dropzone": "^3.5.0",
     "node-sass": "4.14.1",
@@ -29,8 +29,12 @@
     "react-inlinesvg": "^2.2.2",
     "react-number-format": "^4.4.4",
     "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "use-places-autocomplete": "^1.8.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
