--- a/amplify/backend/auth/serveasapc63b4c13/serveasapc63b4c13-cloudformation-template.yml
+++ b/amplify/backend/auth/serveasapc63b4c13/serveasapc63b4c13-cloudformation-template.yml
@@ -145,7 +145,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'servea0481baae_sns-role', !Join ['',[ 'sns', '0481baae', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'serveac63b4c13_sns-role', !Join ['',[ 'sns', 'c63b4c13', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -157,10 +157,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: servea0481baae_role_external_id
+                sts:ExternalId: serveac63b4c13_role_external_id
       Policies:
         -
-          PolicyName: servea0481baae-sns-policy
+          PolicyName: serveac63b4c13-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -212,7 +212,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: servea0481baae_role_external_id
+        ExternalId: serveac63b4c13_role_external_id
     
   
   UserPoolClientWeb:
@@ -220,7 +220,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: servea0481baae_app_clientWeb
+      ClientName: serveac63b4c13_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -230,7 +230,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: servea0481baae_app_client
+      ClientName: serveac63b4c13_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -241,7 +241,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '0481baae', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'c63b4c13', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -295,7 +295,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: servea0481baae_userpoolclient_lambda_iam_policy
+      PolicyName: serveac63b4c13_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -312,7 +312,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: servea0481baae_userpoolclient_lambda_log_policy
+      PolicyName: serveac63b4c13_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -352,7 +352,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'serveasap0481baae_identitypool_0481baae', !Join ['',['serveasap0481baae_identitypool_0481baae', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'serveasapc63b4c13_identitypool_c63b4c13', !Join ['',['serveasapc63b4c13_identitypool_c63b4c13', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
