--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "serveasap0481baae": {
+    "serveasapc63b4c13": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -22,12 +22,13 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authserveasap0481baae"
+              "userPoolId": "authserveasapc63b4c13"
             }
           },
           "additionalAuthenticationProviders": []
         }
       }
     }
-  }
+  },
+  "function": {}
 }
