--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-thunk": "^2.3.0",
     "use-places-autocomplete": "^1.8.1",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
